# io/rest/swagger.yaml
@@ -2,6 +2,34 @@ basePath: /
 consumes:
     - application/json
 definitions:
+    AdminLogsGet:
+        properties:
+            car_tage:
+                type: string
+                x-go-name: CarTag
+            enter_time:
+                format: date-time
+                type: string
+                x-go-name: EnterTime
+            exit_time:
+                format: date-time
+                type: string
+                x-go-name: ExitTime
+            first_name:
+                type: string
+                x-go-name: FirstName
+            id:
+                format: int64
+                type: integer
+                x-go-name: ID
+            last_name:
+                type: string
+                x-go-name: LastName
+            phone:
+                type: string
+                x-go-name: Phone
+        type: object
+        x-go-package: github.com/farazff/IoT-parking/io/rest/sw
     Credentials:
         properties:
             password:
@@ -496,6 +524,39 @@ paths:
             summary: This route is used by user to sign up.
             tags:
                 - User
+    /v1/logs/{:page}:
+        get:
+            operationId: getLogs
+            parameters:
+                - description: api key for APIs
+                  in: header
+                  name: api-key
+                  required: true
+                  type: string
+                  x-go-name: ApiKey
+                - description: Session token
+                  in: header
+                  name: session_token
+                  required: true
+                  type: string
+                  x-go-name: SessionToken
+                - format: int64
+                  in: path
+                  name: Page
+                  required: true
+                  type: integer
+            responses:
+                "200":
+                    $ref: '#/responses/AdminLogsRes'
+                "400":
+                    $ref: '#/responses/ErrorMessage'
+                "401":
+                    $ref: '#/responses/ErrorUnauthorizedMessage'
+                "500":
+                    $ref: '#/responses/ErrorMessage'
+            summary: This route is used by parking admin to get parking logs
+            tags:
+                - Parking_Admin
     /v1/parking:
         post:
             operationId: createParking
@@ -858,6 +919,11 @@ paths:
                   required: true
                   type: string
                   x-go-name: SessionToken
+                - format: int64
+                  in: path
+                  name: Page
+                  required: true
+                  type: integer
             responses:
                 "200":
                     $ref: '#/responses/UserLogsRes'
@@ -1229,6 +1295,20 @@ paths:
 produces:
     - application/json
 responses:
+    AdminLogsRes:
+        description: ""
+        headers:
+            session_token:
+                description: 'in: cookie'
+                type: string
+        schema:
+            properties:
+                logs:
+                    items:
+                        $ref: '#/definitions/AdminLogsGet'
+                    type: array
+                    x-go-name: AdminLogsGet
+            type: object
     ApprovedWhitelistsGetRes:
         description: ""
         headers:
